Fix speaking list layout on small screens

--- a/css/atomic.css
+++ b/css/atomic.css
@@ -91,14 +91,14 @@
 .Fw\(800\) {
   font-weight: 800;
 }
-.Fz\(ms2\) {
-  font-size: 1.44rem;
+.Fz\(ms1\) {
+  font-size: 1.2rem;
 }
 .Fz\(msn1\) {
   font-size: 0.833rem;
 }
-.Fz\(ms1\) {
-  font-size: 1.2rem;
+.Fz\(ms2\) {
+  font-size: 1.44rem;
 }
 .Fz\(ms3\) {
   font-size: 1.728rem;
@@ -106,14 +106,14 @@
 .Fz\(ms0\) {
   font-size: 1rem;
 }
+.H\(ms2\) {
+  height: 1.44rem;
+}
 .H\(0\) {
   height: 0;
 }
 .H\(1\/2\) {
   height: 50%;
-}
-.H\(ms2\) {
-  height: 1.44rem;
 }
 .H\(r1\) {
   height: 1.5rem;
@@ -192,14 +192,8 @@
 .Mt\(a\) {
   margin-top: auto;
 }
-.Mend\(rh\) {
-  margin-right: 0.75rem;
-}
 .Mb\(rh\) {
   margin-bottom: 0.75rem;
-}
-.Mstart\(rh\) {
-  margin-left: 0.75rem;
 }
 .Mah\(100\%\) {
   max-height: 100%;
@@ -246,14 +240,14 @@
 .Miw\(300px\) {
   min-width: 300px;
 }
+.Op\(\.6\) {
+  opacity: .6;
+}
 .Op\(\.9\) {
   opacity: .9;
 }
 .Op\(1\)\:h:hover {
   opacity: 1;
-}
-.Op\(\.6\) {
-  opacity: .6;
 }
 .Op\(\.3\) {
   opacity: .3;
@@ -356,11 +350,11 @@
 .W\(100\%\) {
   width: 100%;
 }
-.W\(1\/2\) {
-  width: 50%;
-}
 .W\(ms2\) {
   width: 1.44rem;
+}
+.W\(1\/2\) {
+  width: 50%;
 }
 .W\(r1\) {
   width: 1.5rem;
@@ -417,6 +411,26 @@ a[class*=LineClamp]:after {
   bottom: 0;
   left: 0;
 }
+@media screen and (min-width: 29.375em) {
+  .D\(f\)--sm {
+    display: flex;
+  }
+  .Fz\(ms3\)--sm {
+    font-size: 1.728rem;
+  }
+  .Mt\(r2\)--sm {
+    margin-top: 3rem;
+  }
+  .Mend\(rh\)--sm {
+    margin-right: 0.75rem;
+  }
+  .Mstart\(rh\)--sm {
+    margin-left: 0.75rem;
+  }
+  .W\(1\/2\)--sm {
+    width: 50%;
+  }
+}
 @media screen and (orientation:landscape) {
   .D\(f\)--land {
     display: flex;
@@ -457,17 +471,6 @@ a[class*=LineClamp]:after {
   }
   .W\(r1h\)--md {
     width: 2.25rem;
-  }
-}
-@media screen and (min-width: 29.375em) {
-  .Fz\(ms3\)--sm {
-    font-size: 1.728rem;
-  }
-  .Mt\(r2\)--sm {
-    margin-top: 3rem;
-  }
-  .W\(1\/2\)--sm {
-    width: 50%;
   }
 }
 @media screen and (min-width: 29.375em) and (max-width: 54.938em) {
